# spec-craft

./: .gitignore  .readthedocs.yaml  GEMINI.md  MANIFEST.in  README.md  jscad-tool.js  pyproject.toml
.github/workflows/: publish.yml  test.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: Makefile  requirements.txt
docs/source/: conf.py  domain-guides.md  index.md  installation.md  maintenance.md  strategy.md
obsidian/: strategy.md
obsidian/.obsidian/: workspace.json
obsidian/ja/: strategy.md
specs/001-project-foundation-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-obsidian-sdd-hub/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tactical-automation-bootstrapping/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-multilingual-svg-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-extension-interface-blender/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-multilingual-docs-sphinx/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-jscad-visual-feedback-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-agent-governance-image-gen/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-release-engineering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-bonsai-setup-automation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-refine-release/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-phase-12-vision/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-workflow-reliability/: research.md
specs/014-workflow-reliability/: data-model.md  plan.md  spec.md  tasks.md
src/spec_craft/: main.py
tests/: conftest.py
tests/integration/: test_blender_vision.py  test_bonsai.py  test_build_pipeline.py  test_cli.py  test_extension.py  test_full_pipeline.py  test_generative_flow.py  test_hub_prompts.py  test_hub_tools.py  test_integration.py  test_tactical_tools.py  test_visual_feedback.py
tests/unit/: test_agent.py  test_agent_capabilities.py  test_blender_driver.py  test_cad_driver.py  test_detector.py  test_emacs.py  test_env_check.py  test_executor.py  test_manager.py  test_packaging.py  test_parser.py  (+2 more)
(+47 files in other folders)
